// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletListItem should render 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="border-b border-theme-neutral-200"
      >
        <td
          class="py-6 mt-1"
        >
          <div
            class="sc-AxiKw jQtkkF"
          >
            <div
              class="sc-AxhCb VoPpj"
              height="20"
              width="20"
            />
          </div>
          <div
            class="sc-AxiKw jQtkkF"
          />
        </td>
        <td
          class="py-1"
        />
        <td
          class="py-1 text-sm font-bold"
        >
          <div
            class="inline-block mr-2 align-middle text-theme-warning-400"
          >
            <div
              class="sc-AxhCb kAKLDr"
              height="16"
              width="16"
            >
              <svg>
                star.svg
              </svg>
            </div>
          </div>
          <div
            class="inline-block mr-2 align-middle text-theme-neutral-600"
          >
            <div
              class="sc-AxhCb kAKLDr"
              height="16"
              width="16"
            />
          </div>
        </td>
        <td
          class="font-semibold text-right"
        >
          <div />
        </td>
        <td
          class="text-right text-theme-neutral-400"
        >
          <div />
        </td>
        <td>
          0
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`WalletListItem should render a button if variant is 'singleAction' 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="border-b border-theme-neutral-200"
      >
        <td
          class="py-6 mt-1"
        >
          <div
            class="sc-AxiKw jQtkkF"
          >
            <div
              class="sc-AxhCb VoPpj"
              height="20"
              width="20"
            />
          </div>
          <div
            class="sc-AxiKw jQtkkF"
          />
        </td>
        <td
          class="py-1"
        />
        <td
          class="py-1 text-sm font-bold"
        />
        <td
          class="font-semibold text-right"
        >
          <div />
        </td>
        <td
          class="text-right text-theme-neutral-400"
        >
          <div />
        </td>
        <td>
          <div
            class="text-right"
          >
            <button
              class="sc-AxirZ fhzkRl"
              color="primary"
              data-testid="button"
              type="button"
            >
              Option 1
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
